Change stylesheet using sass

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ tagline:
   </div>
 
   <div class="row" id="view-more">
-    <a href="{{ site.BASE_PATH}}/{{ site.posts_path }}">more &rarr;</a>
+    <a href="{{ site.BASE_PATH}}/{{ site.posts_path }}">all &rarr;</a>
   </div>
 
 </div>
